--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
-node_modules
+ dependencies
+/node_modules
+/.pnp
+.pnp.js
+.eslintrc.js
+prettier.config.js
+# testing
+/coverage
+.eslintrc.js
+prettier.config.js
+# production
+/build
+
+# misc
 .DS_Store
-dist
-dist-ssr
-*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# /src/hoc/ApolloConnect.js
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
